single_cells/logs/old/20251223_001734/pvsst_20094_5.err
  File "<stdin>", line 25
    print(f\"{int(enabled)} {stem}\")
            ^
SyntaxError: unexpected character after line continuation character
